--- a/DAM_Distancia/Lenguaje_Marcas/Tema 2/receta_cocina/receta.html
+++ b/DAM_Distancia/Lenguaje_Marcas/Tema 2/receta_cocina/receta.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Receta de Sopa de Cebolla</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
