--- a/DAM_Distancia/Lenguaje_Marcas/Tema 2/sobre_mi/personal.html
+++ b/DAM_Distancia/Lenguaje_Marcas/Tema 2/sobre_mi/personal.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Mi Página Personal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Mi Nombre</h1>
         <p>Estudios, Profesión o Aficiones</p>
-        <img src="mi_foto.jpg" alt="Mi Foto">
+        <img src="C:\Users\xdGHOSTbx\Desktop\Documentos Ciclo\DAM_Distancia_1\DAM_Distancia\Lenguaje_Marcas\Tema 2\sobre_mi\imagenes\foto_carnet.jpg" alt="Mi Foto">
     </header>
 
     <nav>
