--- a/DAM_Distancia/Lenguaje_Marcas/Tema 2/sobre_mi/personal.html
+++ b/DAM_Distancia/Lenguaje_Marcas/Tema 2/sobre_mi/personal.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Mi Página Personal</title>
@@ -6,9 +7,9 @@
 </head>
 <body>
     <header>
-        <h1>Mi Nombre</h1>
-        <p>Estudios, Profesión o Aficiones</p>
-        <img src="C:\Users\xdGHOSTbx\Desktop\Documentos Ciclo\DAM_Distancia_1\DAM_Distancia\Lenguaje_Marcas\Tema 2\sobre_mi\imagenes\foto_carnet.jpg" alt="Mi Foto">
+        <h1>Jose Daniel Martínez Martínez</h1>
+        <p>Electricista, Electrónico y futuro Programador</p>
+        <img src="imagenes/foto-carnet.jpg" alt="Mi Foto">
     </header>
 
     <nav>
@@ -21,7 +22,11 @@
 
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
-        <p>Breve descripción sobre quién soy y mis intereses.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non bibendum sapien. Mauris sed metus nisi. Quisque sodales magna at lectus venenatis aliquet. Etiam id magna vel massa lobortis tincidunt. Pellentesque ac sem non eros ultricies lobortis vel ut mi. Cras molestie urna vel metus mollis bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        
+        <p>Aenean a nisl ex. Nullam id interdum justo. Vestibulum ullamcorper enim sed libero cursus viverra. Nulla finibus, lectus vel ultricies consequat, leo nulla viverra felis, sit amet posuere urna neque quis ex. Proin et mauris at erat rhoncus venenatis cursus tempus diam. Etiam sit amet magna vel ante interdum elementum. Nunc ac turpis ut urna fringilla placerat. Vivamus in vulputate quam. Phasellus luctus, felis sit amet faucibus rutrum, elit tortor ullamcorper metus, in facilisis nisi nunc eu nibh. Nunc congue sed eros ac semper. Integer nec mauris molestie, consequat velit eget, dapibus est.</p>
+        
+        <p>Aenean varius ante sit amet lacus aliquet, ut posuere dolor ultrices. Nulla id tempus arcu, eget tincidunt ipsum. Aenean ornare cursus nisi, ullamcorper sollicitudin nunc vulputate vel. Quisque aliquet pulvinar est, id ultricies ligula varius sed. Vivamus vel malesuada ipsum. Sed quis aliquam libero. Ut sit amet purus sit amet urna convallis ornare. Duis et nisl vitae quam elementum cursus. Suspendisse ut tincidunt nisl. Mauris pretium, purus a ultrices feugiat, lectus velit semper justo, aliquam ultrices metus mauris quis enim. Aliquam semper pellentesque augue. Mauris a metus sed nunc interdum maximus vitae vel lacus. Ut aliquet non velit sed placerat. Nunc volutpat molestie augue. .</p>
     </section>
 
     <section id="educacion">
@@ -36,9 +41,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Nombre del Grado</td>
-                    <td>Nombre de la Universidad</td>
-                    <td>20XX</td>
+                    <td>Desarrollo de aplicaciones multiplataforma</td>
+                    <td>IES Chan do Monte</td>
+                    <td>2023-2024</td>
+                </tr>
+                <tr>
+                    <td>Mantenimiento Electrínico</td>
+                    <td>Colegio Hogar Afundación</td>
+                    <td>2019-2021</td>
+                </tr>
+                <tr>
+                    <td>Instalaciones Electricas y Automáticas</td>
+                    <td>IES A Paralaia</td>
+                    <td>2016-2018</td>
                 </tr>
             </tbody>
         </table>
@@ -46,7 +61,13 @@
 
     <section id="aficiones">
         <h2>Aficiones</h2>
-        <p>Lista de algunas de mis aficiones e intereses.</p>
+            <li>Lista1</li>
+            <li>Lista2</li>
+            <li>Lista3</li>
+            <li>Lista4</li>
+            <li>Lista5</li>
+            <li>Lista6</li>
+            <li>Lista7</li>
     </section>
 
     <footer>
